# Hands-On-RTOS-With-Microcontrollers-Chapter-7

./: .tool-versions  CMakeLists.txt  FreeRTOSConfig.h  Nucleo_F767ZI_GPIO.h  Nucleo_F767ZI_Init.cpp  Nucleo_F767ZI_Init.h  Pipfile  README.adoc  black_magic_probe_flash.scr
CMake/Modules/Platform/: ARM-GNU.cmake
CMake/Toolchains/: arm-none-eabi-gnu.cmake
include/: FreeRTOSConfig.h  Nucleo_F767ZI_GPIO.hpp  Nucleo_F767ZI_Init.hpp  cmsis_os.h  cmsis_os2.h  main.h  main.hpp  stm32f7xx_hal_conf.h  stm32f7xx_it.hpp
src/: CMakeLists.txt  Nucleo_F767ZI_GPIO.cpp  Nucleo_F767ZI_Init.cpp  cmsis_os2.c  main.cpp  stm32f7xx_hal_msp.c  stm32f7xx_hal_msp.cpp  stm32f7xx_it.c  stm32f7xx_it.cpp  syscalls.c  syscalls.cpp  sysmem.cpp
